feat: 첫번째 미션 구현

--- a/styles/spinButton.module.css
+++ b/styles/spinButton.module.css
@@ -1,8 +1,9 @@
-.container {
-  margin-top: 25%;
+.text {
+  margin: 0 1rem;
+  width: 2rem;
   text-align: center;
 }
 
-.text {
-  margin: 0 1rem;
+.button:disabled {
+  cursor: not-allowed;
 }
