feat: 메인 페이지에 `SpinButton` 컴포넌트 적용

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  width: 100%;
+  min-width: 320px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
