--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,8 @@ a {
 main {
   padding: 50px 20px;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
