refactor: disabled => aria-disabled로

--- a/styles/spinButton.module.css
+++ b/styles/spinButton.module.css
@@ -4,6 +4,8 @@
   text-align: center;
 }
 
-.button:disabled {
+.button[aria-disabled='true'] {
   cursor: not-allowed;
+  background-color: rgb(238, 238, 238);
+  border: 2px solid rgb(230, 230, 230);
 }
