refactor: next.js 적용

--- a/src/pages/SpinButton.module.css
+++ b/src/pages/SpinButton.module.css
@@ -1,6 +1,6 @@
 .Controller {
   margin: 2rem auto;
-  width: 20rem;
+  width: 30rem;
 }
 
 .Controller > h1 {
@@ -22,7 +22,7 @@
   width: 2rem;
   height: 2rem;
 
-  background: url(../images/tooltip.svg) no-repeat 50% 50%;
+  background: url(../../public/images/tooltip.svg) no-repeat 50% 50%;
   background-size: 1.5rem 1.5rem;
   cursor: pointer;
 }
@@ -38,7 +38,7 @@
   border-radius: 50%;
 }
 
-.SpinButton {
+.Button {
   width: 2.75rem;
   height: 2.75rem;
 
@@ -51,11 +51,11 @@
 }
 
 .SpinButtonPlus {
-  background: url(../images/plus.svg) no-repeat 50% 50%;
+  background: url(../../public/images/plus.svg) no-repeat 50% 50%;
 }
 
 .SpinButtonMinus {
-  background: url(../images/minus.svg) no-repeat 50% 50%;
+  background: url(../../public/images/minus.svg) no-repeat 50% 50%;
 }
 
 .AdultCountInput {
