--- a/style/SpinButton.module.css
+++ b/style/SpinButton.module.css
@@ -34,8 +34,8 @@
   width: 1px;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+.number-input::-webkit-outer-spin-button,
+.number-input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
