--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,8 @@ button {
 }
 
 .default-button-container {
+  position: relative;
+
   width: 44px;
   height: 44px;
 
@@ -49,6 +51,15 @@ button {
 
   border: none;
   background-color: transparent;
+}
+
+.default-button-container::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .round-button-icon {
