--- a/src/css/counter.css
+++ b/src/css/counter.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+.disabled-button {
+  cursor: not-allowed;
+  opacity: 0.7;
+  color: #cccccc;
+}
+
 #adult-passenger-input {
   width: 3rem;
   height: 3rem;
