feat: aria-hidden 스타일링 추가

--- a/src/css/counter.css
+++ b/src/css/counter.css
@@ -43,3 +43,12 @@
   display: flex;
   align-items: center;
 }
+
+.aria-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: polygon(0 0, 0 0, 0 0);
+}
