feat: 성인 승객 추가/감소 [숫자] 읽어주는 기능

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -64,3 +64,15 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.hidden {
+  overflow: hidden;
+  white-space: no-wrap;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+}
