--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,31 +1,13 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-button {
-  color: black;
-  cursor: pointer;
-}
+@import url("./reset.css");
+@import url("./default-button.css");
 
 .spin-input-section {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 1rem;
-}
-
-/* Chrome, Safari, Edge, Opera */
-.spin-input-section input::-webkit-outer-spin-button,
-.spin-input-section input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-.spin-input-section input[type="number"] {
-  -moz-appearance: textfield;
+  padding: 2rem;
+  width: max-content;
+  margin: 0 auto;
 }
 
 .spin-input-title {
@@ -39,29 +21,6 @@ button {
 
 .spin-label {
   font-weight: bold;
-}
-
-.default-button-container {
-  position: relative;
-
-  width: 44px;
-  height: 44px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border: none;
-  background-color: transparent;
-}
-
-.default-button-container::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .round-button-icon {
@@ -88,7 +47,7 @@ button {
   border: none;
 }
 
-.input-area {
+.input-container {
   display: flex;
 }
 
