--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -60,7 +60,7 @@
   font-size: 1rem;
 }
 
-.spin-button-value-input {
+#spin-input-value {
   border: none;
   border-radius: 0;
   box-shadow: none;
