style: 회색 색상 변경

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,9 +37,9 @@
 
 .tip-button-icon {
   border-radius: 50%;
-  border: 2px solid gray;
+  border: 2px solid #4f4f4f;
 
-  color: gray;
+  color: #4f4f4f;
   font-weight: bold;
 }
 
