--- a/src/global.css
+++ b/src/global.css
@@ -15,7 +15,12 @@ button {
 }
 
 .hide {
-  display: none;
+  overflow: hidden !important;
+  width: 0 !important;
+  height: 0 !important;
+  border: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .help-content {
