--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -10,13 +10,13 @@ button {
 }
 
 /* Chrome, Safari, Edge, Opera */
-.spin-input-section input::-webkit-outer-spin-button,
-.spin-input-section input::-webkit-inner-spin-button {
+.spin-input-form input::-webkit-outer-spin-button,
+.spin-input-form input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
 /* Firefox */
-.spin-input-section input[type="number"] {
+.spin-input-form input[type="number"] {
   -moz-appearance: textfield;
 }
