--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,10 @@
 @import url("./reset.css");
 @import url("./default-button.css");
 
-.spin-input-section {
+.spin-input-form {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
   padding: 2rem;
   width: max-content;
   margin: 0 auto;
@@ -41,10 +41,6 @@
 
   color: #4f4f4f;
   font-weight: bold;
-}
-
-.spin-input {
-  border: none;
 }
 
 .input-container {
