feat: aria-label 추가

--- a/src/components/PassengerCounter/style.css
+++ b/src/components/PassengerCounter/style.css
@@ -49,10 +49,25 @@ input::-webkit-inner-spin-button {
   background-color: white;
 }
 
+.counter__btn:disabled {
+  cursor: not-allowed;
+}
+
 .passenger__item {
   align-items: flex-end;
 
   margin-bottom: 16px;
 
   font-weight: 600;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  margin: -1px;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
 }
