--- a/src/component/SpinButton/index.css
+++ b/src/component/SpinButton/index.css
@@ -27,3 +27,9 @@
   text-align: center;
   max-width: 30px;
 }
+
+.result-message {
+  display: block;
+  color: rgb(164, 164, 164);
+  padding-top: 1rem;
+}
