feat: 웹접근성 관련 변경
- button ariaLive 특성 제거
- input label ariaHidden 및 hidden 특성 제거

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -84,3 +84,15 @@ input[type='number']::-webkit-inner-spin-button {
   transition: 1s;
   width: 0%;
 }
+
+.hide-element {
+  border: 0;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
