--- a/styles/components/Layout.module.scss
+++ b/styles/components/Layout.module.scss
@@ -1,22 +1,13 @@
-.layout {
-  width: 100%;
-  height: 100%;
-  padding-top: 64px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+$header-height: 64px;
 
 .header {
-  position: absolute;
-  top: 0;
   width: 100%;
-  height: 64px;
+  height: $header-height;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 2px solid gray;
+  border-bottom: 1px solid gray;
+  padding: 0 1rem;
 
   a {
     margin-right: auto;
@@ -26,4 +17,13 @@
     font-size: 16px;
     margin-right: auto;
   }
+}
+
+.contents {
+  width: 100%;
+  min-height: calc(100vh - $header-height);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
