--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
-  text-align: center;
+  padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App h2 {
+  font-size: 1.5rem;
+  line-height: 1.5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.passenger__controller-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  
+  height: 6.25rem;
+}
+
+.passenger__label {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  font-size: 1rem;
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+.popover-trigger {
+  width: 2.25rem;
+  height: 2.25rem;
+  background-size: 24px 24px;
+  background: url(./images/ico-opener.svg) no-repeat 50% 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.passenger__control {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
+.passenger__control-input {
+  width: 3rem;
+  height: 3rem;
+
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+  border-bottom: 1px solid #00256c;
+
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.passenger__control-sub,
+.passenger__control-add {
+  width: 2.75rem;
+  height: 2.75rem;
+}
+
+.passenger__control-sub {
+  left: 0;
+  background: url(./images/passenger__control-sub.svg) 50% 50%/32px 32px
+    no-repeat;
+}
+
+.passenger__control-add {
+  right: 0;
+  background: url(./images/passenger__control-add.svg) 50% 50%/32px 32px
+    no-repeat;
 }
