--- a/src/style/index.css
+++ b/src/style/index.css
@@ -49,6 +49,7 @@ input[type='number']::-webkit-inner-spin-button {
 }
 
 #counter__value {
+  width: 3rem;
   font-size: 2rem;
   text-align: center;
   border: none;
