refactor: 웹 접근성 개선

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,15 @@
   background: url(./images/passenger__control-add.svg) 50% 50%/32px 32px
     no-repeat;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
