refactor : tooltip div 밖으로 빼기

--- a/src/component/SpinButton/index.css
+++ b/src/component/SpinButton/index.css
@@ -28,7 +28,7 @@
   background: rgb(31, 98, 161);
 }
 
-.question-icon:hover .tool-tip {
+.question-icon:hover + .tool-tip {
   display: block;
 }
 
