--- a/styles/_app.module.scss
+++ b/styles/_app.module.scss
@@ -1,4 +1,4 @@
-$header-height: 64px;
+@import './_variable.scss';
 
 .header {
   width: 100%;
@@ -6,22 +6,20 @@ $header-height: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid gray;
+  box-shadow: 0px 2px 2px 2px $light-gray-color;
   padding: 0 1rem;
-
-  a {
-    margin-right: auto;
-  }
+  background-color: $primary-color;
 
   h1 {
-    font-size: 16px;
-    margin-right: auto;
+    color: white;
+    font-size: 1.3rem;
+    cursor: pointer;
   }
 }
 
-.contents {
-  width: 100%;
+.main {
   min-height: calc(100vh - $header-height);
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
