--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,7 @@ input[type="number"]::-webkit-inner-spin-button {
   background-color: white;
   font-weight: bold;
   border: 2px solid gray;
+  cursor: pointer;
 }
 
 .passenger-title {
@@ -24,7 +25,7 @@ input[type="number"]::-webkit-inner-spin-button {
   color: gray;
 }
 
-.count-input {
+#passenger-amount-input {
   margin: 0 15px;
   border: none;
   border-bottom: 1px solid black;
@@ -34,8 +35,15 @@ input[type="number"]::-webkit-inner-spin-button {
   font-weight: bolder;
 }
 
-.count {
+.decrement-button,
+.increment-button {
   width: 30px;
   height: 30px;
   font-size: 20px;
+}
+
+#input-status {
+  opacity: 0;
+  height: 0;
+  width: 0;
 }
