--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,7 +43,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 #input-status {
-  opacity: 0;
-  height: 0;
+  overflow: hidden;
   width: 0;
+  height: 0;
 }
