--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,7 +43,10 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 #input-status {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
   overflow: hidden;
-  width: 0;
-  height: 0;
+  clip-path: polygon(0 0, 0 0, 0 0);
 }
