refactor: PassengerController 구조 변경

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   height: 6.25rem;
 }
 
+.passenger__controller-label-container {
+  display: flex;
+}
+
 .passenger__label {
   display: flex;
   align-items: center;
