--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ input[type="number"]::-webkit-inner-spin-button {
 .passenger-type {
   display: flex;
   align-items: center;
+  position: relative;
+  margin: 20px 0;
 }
 
 .passenger-type__tooltip {
@@ -24,9 +26,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .passenger-type__tooltip + p {
-  position: absolute;
   display: none;
-  left: 10px;
+  position: absolute;
+  left: 100px;
   padding: 10px;
   font-size: 15px;
   font-weight: bold;
@@ -36,7 +38,6 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .passenger-type__tooltip:hover + p {
-  position: relative;
   display: block;
 }
 
