feat: 승객수를 버튼을 통해 변경했을 때, 스크린리더가 상태를 읽어주는 기능 추가
aria-live를 사용

--- a/src/components/PassengerCountInput/PassengerCountInput.css
+++ b/src/components/PassengerCountInput/PassengerCountInput.css
@@ -57,3 +57,12 @@
   border-color: #d3d3d3;
   cursor: not-allowed;
 }
+
+.invisible {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0 0 0 0);
+  margin: -1px;
+  overflow: hidden;
+}
