--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,21 @@ h2 {
   margin: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input {
+  border-radius: 0;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
 button {
   border: none;
   background: none;
@@ -34,9 +49,11 @@ button:hover {
   height: 2rem;
 }
 
-.passenger-amount-wrapper {
+.passenger-amount-input {
   font-size: 1.6rem;
   font-weight: bold;
+  padding: 0.4rem;
+  border: 0;
   border-bottom: 1px solid black;
   width: 2rem;
   text-align: center;
@@ -56,4 +73,18 @@ button:hover {
 .content {
   display: flex;
   gap: 1rem;
+}
+
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important;
+  opacity: 0.01;
 }
