--- a/src/components/PassengerCountInput/PassengerCountInput.css
+++ b/src/components/PassengerCountInput/PassengerCountInput.css
@@ -26,7 +26,7 @@
 }
 
 .spin-button {
-  /* all: unset; */
+  all: unset;
   border: 1px solid gray;
   width: 30px;
   height: 30px;
@@ -36,7 +36,6 @@
   cursor: pointer;
 }
 
-/* input type="number"의 화살표를 없앰 */
 .passenger-count-input::-webkit-outer-spin-button,
 .passenger-count-input::-webkit-inner-spin-button {
   -webkit-appearance: none;
