--- a/src/pages/PassengerPage/PassengerPage.css
+++ b/src/pages/PassengerPage/PassengerPage.css
@@ -6,7 +6,14 @@
   align-items: center;
 }
 
-.section {
+.sub {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
+.counter {
   display: flex;
   flex-direction: row;
   gap: 20px;
@@ -20,5 +27,6 @@
   font-size: 30px;
   font-weight: 600;
 
+  border: none;
   border-bottom: 2px solid gray;
 }
