--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,13 @@
+@import './reset-css';
+@import './font-face';
+
 :root {
   font-size: 16px;
   line-height: 100%;
+}
+
+html {
+  overflow-y: scroll;
 }
 
 html,
@@ -8,10 +15,8 @@ body,
 button,
 input,
 textarea {
-  font-family: -apple-system, BlinkMacSystemFont, Apple SD Gothic Neo, Helvetica, Arial, NanumGothic,
-    나눔고딕, Malgun Gothic, 맑은 고딕, Dotum, 굴림, gulim, 새굴림, noto sans, 돋움, sans-serif;
+  font-family: 'NanumBarunGothic', sans-serif;
   font-weight: 400;
-  -webkit-font-smoothing: antialiased;
 }
 
 *,
