--- a/src/css/index.css
+++ b/src/css/index.css
@@ -137,6 +137,7 @@ body {
 .carousel__wrap {
   display: flex;
   position: relative;
+  background-color: #eee;
   align-items: center;
 }
 
@@ -145,21 +146,20 @@ body {
   display: flex;
   flex-shrink: 0;
   align-items: center;
-  background-color: #eee;
-  height: 320px;
-  width: 800px;
+  height: 350px;
+  width: 720px;
   overflow: hidden;
+  margin: 20px 30px;
 }
 
 .slide {
   flex-shrink: 0;
   box-sizing: border-box;
-  width: 200px;
-  height: 300px;
-  padding: 20px;
+  width: 240px;
+  height: 350px;
+  padding: 20px 20px 20px 35px;
   border: 1px solid black;
   background-color: #fff;
-  transition: linear 0.3s;
 }
 
 .slide h2 {
@@ -173,11 +173,11 @@ body {
 
 .next {
   position: absolute;
-  width: 40px;
-  height: 80px;
+  width: 50px;
+  height: 100px;
   background-color: rgba(115, 111, 111, 0.8);
-  border-top-left-radius: 91px;
-  border-bottom-left-radius: 91px;
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
   border: 1px solid gray;
   border-bottom: 0;
   right: 0;
@@ -188,15 +188,28 @@ body {
 
 .prev {
   position: absolute;
-  width: 40px;
-  height: 80px;
+  width: 50px;
+  height: 100px;
   background-color: rgba(115, 111, 111, 0.8);
-  border-top-right-radius: 91px;
-  border-bottom-right-radius: 91px;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
   border: 1px solid gray;
   border-bottom: 0;
   font-size: 2rem;
   color: white;
   left: 0;
   cursor: pointer;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  outline: none;
+}
+
+a:hover,
+a:active,
+a:focus,
+a:visited {
+  text-decoration: none;
 }
