--- a/src/pages/PeopleCount/styles.module.scss
+++ b/src/pages/PeopleCount/styles.module.scss
@@ -18,6 +18,8 @@
   .label {
     display: flex;
     flex-direction: row;
+    font-size: 1.25rem;
+    font-weight: bold;
     gap: 0.5rem;
 
     .tip {
