fix: 레이아웃 오류 수정

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,7 +24,8 @@ input[type='number'] {
 
 #page {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding-top: 40px;
 }
 
