--- a/src/css/index.css
+++ b/src/css/index.css
@@ -157,8 +157,6 @@ body {
   box-sizing: border-box;
   width: 240px;
   height: 350px;
-  padding: 20px 20px 20px 35px;
-  border: 1px solid black;
   background-color: #fff;
   margin: 0 10px;
 }
@@ -213,4 +211,18 @@ a:active,
 a:focus,
 a:visited {
   text-decoration: none;
+}
+
+.anchor {
+  height: 100%;
+}
+
+.slide__link {
+  display: inline-block;
+  width: inherit;
+  height: inherit;
+  padding: 20px 0px 0px 35px;
+  box-sizing: border-box;
+  border: 1px solid black;
+  box-shadow: -10px 0px 10px -10px #000;
 }
