--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,7 +42,7 @@ input[type="number"]::-webkit-inner-spin-button {
   font-size: 20px;
 }
 
-#input-status {
+.sr-only {
   position: absolute;
   width: 1px;
   height: 1px;
