--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,6 +42,14 @@ input[type="number"]::-webkit-inner-spin-button {
   font-size: 20px;
 }
 
+.tooltip-content {
+  padding: 10px 14px;
+  border-radius: 4px;
+  background-color: rgb(0, 0, 0, 0.8);
+  color: white;
+  font-weight: 600;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
