--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,13 +24,7 @@ input[type='number'] {
 
 .aria-hidden {
   position: absolute;
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(0 0 99.9% 99.9%);
-  overflow: hidden;
-  height: 1px;
-  width: 1px;
-  padding: 0;
-  margin: 0;
+  text-indent: -9999px;
 }
 
 #page {
