--- a/src/css/index.css
+++ b/src/css/index.css
@@ -161,15 +161,6 @@ body {
   margin: 0 10px;
 }
 
-.slide h2 {
-  font-size: 2rem;
-}
-
-.slide p {
-  font-size: 1.2rem;
-  margin: 5px;
-}
-
 .next {
   position: absolute;
   width: 50px;
@@ -221,8 +212,80 @@ a:visited {
   display: inline-block;
   width: inherit;
   height: inherit;
-  padding: 20px 0px 0px 35px;
+  padding: 10px 0px 0px 20px;
   box-sizing: border-box;
-  border: 1px solid black;
   box-shadow: -10px 0px 10px -10px #000;
+}
+
+.slide-1 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-2 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-3 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-4 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-5 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-6 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-7 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide-8 {
+  background: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slide__location {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.slide__seat {
+  font-size: 14px;
+}
+
+.slide__price {
+  margin-top: -10px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #11277b;
+  text-shadow: -0.5px 0 #fff, 0 0.5px #fff, 0.5px 0 #fff, 0 -0.5px #fff;
 }
