refactor: heading 글자 크기 축소

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -134,6 +134,10 @@ body {
   background-color: #3c8316;
 }
 
+.carousel__header {
+  font-size: 1.5rem;
+}
+
 .carousel__wrap {
   display: flex;
   position: relative;
