--- a/src/components/A11yMessage/A11yMessage.css
+++ b/src/components/A11yMessage/A11yMessage.css
@@ -1,8 +1,11 @@
 .message {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
   overflow: hidden;
-  width: 0;
-  height: 0;
-  border: 0;
-  margin: 0;
-  border: 0;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
