--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,6 +7,7 @@
 
 .passenger-select-menu {
   font-size: 6rem;
+  font-weight: 800;
 }
 
 .passenger-select-option {
@@ -34,7 +35,6 @@
   font-weight: bold;
   color: gray;
   text-align: center;
-  line-height: 4rem;
 }
 
 .passenger-select-tooltip:hover #passenger-select-tooltip-text {
@@ -70,6 +70,10 @@
 }
 
 .passenger-count-control-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 8rem;
   height: 8rem;
   border: 1.5px solid lightgray;
@@ -78,7 +82,6 @@
   background: white;
 
   font-size: 7rem;
-  line-height: 7rem;
 }
 
 .passenger-count-control-button:hover {
