--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,11 @@ input[type="number"]::-webkit-inner-spin-button {
   cursor: pointer;
 }
 
+.passenger-count__minus-button:hover,
+.passenger-count__plus-button:hover {
+  background-color: gray;
+}
+
 .status-message {
   display: none;
 }
