fix: 접근 가능한 텍스트 숨김 처리

--- a/styles.css
+++ b/styles.css
@@ -67,5 +67,12 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .status-message {
-  display: none;
+  border: none;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
 }
