feat: 리뷰 피드백 반영
- 최소 최대값 음성 알림
- 버튼 비활성화
- 툴팁 닫기 버튼 추가

--- a/src/components/spin-button/spin-button.css
+++ b/src/components/spin-button/spin-button.css
@@ -53,6 +53,11 @@ label {
   border: 1px solid darkblue;
 }
 
+.spin-button:disabled {
+  color: lightgray;
+  border: 1px solid lightgray;
+}
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
