--- a/src/app.css
+++ b/src/app.css
@@ -3,13 +3,17 @@
 }
 
 .hidden {
-  overflow: hidden;
-  white-space: nowrap;
-  clip-path: inset(50%);
   position: absolute;
   width: 1px;
   height: 1px;
+  z-index: -1;
+
   margin: 0;
   padding: 0;
   border: 0;
+
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+  overflow: hidden;
+  white-space: nowrap;
 }
