fix: snackbar 위치 수정

--- a/src/style/snackbar.scss
+++ b/src/style/snackbar.scss
@@ -1,7 +1,7 @@
 #snackbar {
   visibility: hidden;
   min-width: 250px;
-  margin-left: -125px;
+  transform: translate(-50%);
   background-color: #333;
   color: #fff;
   text-align: center;
