--- a/src/style/helptip.scss
+++ b/src/style/helptip.scss
@@ -38,7 +38,11 @@
       flex-grow: 1;
     }
 
-    & > .helptip-closer {
+    .helptip-closer {
+      position: absolute;
+      top: 0;
+      right: 0;
+
       display: flex;
       align-items: center;
       justify-content: center;
