--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -2,6 +2,11 @@ li {
   list-style: none;
 }
 
+a {
+  appearance: none;
+  color: black;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -62,4 +67,38 @@ ul {
   position: relative;
   overflow: hidden;
   width: 1310px;
+}
+
+.carousel-description {
+  position: absolute;
+  top: 1.3rem;
+  left: 1.3rem;
+}
+
+.carousel-item {
+  position: relative;
+}
+
+.description-header {
+  font-size: 1.2rem;
+  margin-bottom: 0.8rem;
+  line-height: 1.5;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-height: 7.2rem;
+}
+
+.description-class {
+  font-size: 1rem;
+  margin-bottom: 0.2rem;
+}
+
+.description-price {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #11277b;
 }
