--- a/src/style/index.css
+++ b/src/style/index.css
@@ -18,6 +18,7 @@
 
 .sub-title__container {
   justify-content: flex-start;
+  position: relative;
 }
 
 #tooltip {
@@ -72,6 +73,7 @@ input[type='number']::-webkit-inner-spin-button {
 .counter__value__container {
   position: relative;
 }
+
 #counter__value__line {
   position: absolute;
   bottom: 0;
@@ -96,4 +98,22 @@ input[type='number']::-webkit-inner-spin-button {
   padding: 0;
   position: absolute;
   width: 1px;
+}
+
+#tooltip_description {
+  position: absolute;
+  width: max-content;
+  left: 70px;
+  bottom: 20px;
+  background-color: #333333;
+  color: white;
+  padding: 0.5em;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  backdrop-filter: blur(4px);
+  display: none;
+}
+
+#tooltip:hover #tooltip_description {
+  display: inline-block;
 }
