--- a/src/pages/PeopleCount/styles.module.scss
+++ b/src/pages/PeopleCount/styles.module.scss
@@ -15,6 +15,16 @@
     text-align: center;
   }
 
+  .screen-reader-only {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    display: block;
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+  }
+
   .label {
     display: flex;
     flex-direction: row;
