style: 기본 레이아웃 스타일 일부 수정

--- a/src/styles/style2.css
+++ b/src/styles/style2.css
@@ -1,7 +1,12 @@
+h1 {
+  text-align: center;
+}
+
 .carousel {
   position: relative;
   overflow: hidden;
   width: 700px;
+  margin: 20px auto;
 }
 
 .carousel-content-container {
