refactor: 명시적인 class를 사용한다

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -22,7 +22,7 @@ input[type='number'] {
   display: none;
 }
 
-.aria-hidden {
+.hidden-for-aria-live {
   position: absolute;
   text-indent: -9999px;
 }
