--- a/src/style/carousel.css
+++ b/src/style/carousel.css
@@ -1,1 +1,72 @@
+.carousel__item {
+  position: relative;
+  width: calc((100% - 0.8rem) / 2);
+  margin-left: 0.8rem;
+  flex-shrink: 0;
+}
 
+.carousel__image__container {
+  box-sizing: border-box;
+}
+
+.carousel__image {
+  width: 100%;
+  height: auto;
+  vertical-align: top;
+}
+
+.carousel__item__paragraph__container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  max-height: 15rem;
+  overflow: hidden;
+  padding: 1.6rem 1.8rem;
+}
+
+.carousel__item__location {
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 0.8rem;
+  line-height: 1.58;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-height: 6.6rem;
+}
+
+.carousel__item__seat {
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 1.2rem;
+  color: #000;
+}
+
+.carousel__item__price {
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #11277b;
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-shadow: -0.5px 0 #fff, 0 0.5px #fff, 0.5px 0 #fff, 0 -0.5px #fff;
+}
+
+.carousel__item__price__text {
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
