--- a/src/pages/PromotionList/PromotionList.css
+++ b/src/pages/PromotionList/PromotionList.css
@@ -18,6 +18,7 @@ h2 {
 
 .card-container {
   position: relative;
+  width: 10px;
 }
 
 .cards {
@@ -50,6 +51,7 @@ h2 {
   transform: translateY(-50%);
   border: 0;
   cursor: pointer;
+  z-index: 1;
 }
 
 .gallery-button:disabled {
