--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+}
+
 p {
   margin: 0;
 }
@@ -6,10 +11,31 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.item-container {
+  position: relative;
+  width: 500px;
+  overflow: hidden;
+}
+
 .item-list {
+  display: flex;
+  gap: 40px;
 }
 
 .item {
+  position: relative;
+}
+
+.item-link {
+  display: block;
+}
+
+.item-image {
   width: 230px;
   height: 300px;
   background-repeat: no-repeat;
@@ -19,12 +45,9 @@ ul {
 }
 
 .content-wrapper {
-  display: block;
+  position: absolute;
+  top: 0px;
   padding: 20px 22px;
-}
-
-.item1 {
-  background-image: url("https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg");
 }
 
 .location {
@@ -41,4 +64,33 @@ ul {
   color: #11277b;
   font-weight: bold;
   font-size: 18px;
+}
+
+.button-wrapper {
+  position: absolute;
+  top: 130px;
+  width: 500px;
+}
+
+.button {
+  width: 30px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
+}
+
+.prev-button {
+  position: absolute;
+  left: 0;
+  background: url("https://www.koreanair.com/etc.clientlibs/koreanair/clientlibs/clientlib-base/resources/images/mris__button-left.svg")
+    no-repeat center top;
+  background-size: 30px 60px;
+}
+
+.next-button {
+  position: absolute;
+  right: 0;
+  background: url("https://www.koreanair.com/etc.clientlibs/koreanair/clientlibs/clientlib-base/resources/images/mris__button-right.svg")
+    no-repeat right top;
+  background-size: 30px 60px;
 }
