feat: button disable 추가

--- a/src/pages/CarouselPage/components/CarouselController/style.css
+++ b/src/pages/CarouselPage/components/CarouselController/style.css
@@ -19,6 +19,14 @@
   cursor: pointer;
 }
 
+.left__btn:disabled {
+  cursor: not-allowed;
+}
+
+.right__btn:disabled {
+  cursor: not-allowed;
+}
+
 .right__btn {
   background: url("../../../../images/button-right.svg");
   background-size: 30px 60px;
