--- a/src/App.module.css
+++ b/src/App.module.css
@@ -87,6 +87,15 @@ video {
   vertical-align: baseline;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 header {
   font-size: 30px;
   font-weight: 700;
